name:                grivna
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erochest/grivna#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
copyright:           Copyright 2017 Eric Rochester
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable grivna
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grivna
  default-language:    Haskell2010

test-suite grivna-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grivna
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/grivna
